refactor: 移除 Response，并简化 execute refactor: 优化代码